updated petCard css to prevent pet name from flowing out of box

--- a/frontend/src/styles/PetCard.css
+++ b/frontend/src/styles/PetCard.css
@@ -55,6 +55,10 @@
 .name {
     margin: auto;
     justify-self: center;
+    text-overflow: ellipsis;
+    text-wrap: nowrap;
+    overflow: hidden;
+    margin: 5%;
 }
 
 .fav {
